# flir_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: camera.cfg
include/flir_ros/: flir_ros.hpp
include/flir_ros2/: flir_ros2.hpp
launch/: flirROS2CamerLaunch.py  flir_ros.launch
src/: filr_ros_utils.cpp  flirROS2.cpp  flirROS2Drivers.cpp  flirROS2Utilities.cpp  flir_ros_driver.cpp  main.cpp
